# NDK

./: README.md  build.gradle  crashLog.txt  settings.gradle
breakpad-build/: build.gradle
crashDump/: f37a9d0c-16d4-4f3f-29bc22bf-e067d3ca.dmp
media/: build.gradle
media/src/androidTest/java/com/medi/media/: ExampleInstrumentedTest.java
media/src/main/: AndroidManifest.xml
media/src/main/java/com/medi/media/: MainActivity.java
media/src/test/java/com/medi/media/: ExampleUnitTest.java
sample/: CMakeLists.txt  build.gradle
sample/src/main/cpp/: crash.cpp  dynamic.cpp  dynamic.h
sample/src/main/java/com/dodola/breakpad/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
timeoutexception2/: build.gradle
timeoutexception2/src/androidTest/java/com/medi/timeoutexception2/: ExampleInstrumentedTest.java
timeoutexception2/src/main/: AndroidManifest.xml
timeoutexception2/src/main/java/com/medi/timeoutexception2/: GhostObject.java  MainActivity.java  SampleApplication.java  WatchDogKiller.java
timeoutexception2/src/main/res/values/: strings.xml
timeoutexception2/src/test/java/com/medi/timeoutexception2/: ExampleUnitTest.java
tools/mac/: minidump_stackwalk
